JumpScript/tests/baselines/reference/unusedMultipleParameter1InFunctionExpression.errors.txt
tests/cases/compiler/unusedMultipleParameter1InFunctionExpression.jump(1,21): error TS6133: 'person' is declared but its value is never read.
tests/cases/compiler/unusedMultipleParameter1InFunctionExpression.jump(1,37): error TS6133: 'person2' is declared but its value is never read.
tests/cases/compiler/unusedMultipleParameter1InFunctionExpression.jump(2,9): error TS6133: 'unused' is declared but its value is never read.


==== tests/cases/compiler/unusedMultipleParameter1InFunctionExpression.jump (3 errors) ====
    var func = function(person: string, person2: string) {
                        ~~~~~~
!!! error TS6133: 'person' is declared but its value is never read.
                                        ~~~~~~~
!!! error TS6133: 'person2' is declared but its value is never read.
        var unused = 20;
            ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
        person2 = "Dummy value";
    }